--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -1,5 +1,69 @@
-<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
-  <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Correction of Phone Cell</div>
+<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
+
+  <div class="row py-3">
+    <div class="col-lg-8 col-sm-12">
+        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Correction of Phone Cell</div>
+    </div>
+    <div class="col-lg-4 col-sm-12 self-center">
+        <p class="text-right">
+            <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+            </button>
+          </p>
+    </div>
+</div>
+
+<!-- Header -->
+
+
+
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+
+
+          <div class="form-group kt-form__group row">
+
+            <!-- <kt-alert *ngIf="hasFormErrors" class="col-lg-12" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
+              Please enter valid Input
+            </kt-alert> -->
+          
+              <div class="col-lg-4 kt-margin-bottom-20-mobile">
+      
+                  <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                      <mat-label class="customMatLabel">Zone<strong class="matMandatory">*</strong></mat-label>
+                      <input matInput formControlName="Zone"  maxlength="13" autocomplete="off" readonly="readonly"/>
+                    </mat-form-field>
+              </div>
+      
+              <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                  
+                  <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                      <mat-label class="customMatLabel">Branch<strong class="matMandatory">*</strong></mat-label>
+                      <input matInput formControlName="Branch"  maxlength="13" autocomplete="off" readonly="readonly"/>
+                    </mat-form-field>
+              </div>
+              <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                  <mat-label class="customMatLabel">CNIC#</mat-label>
+                  <!-- <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" [readonly]="viewOnly"/> -->
+                  <input appNumberOnly matInput placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" />
+                </mat-form-field>
+            </div>
+          </div>
+      
+    
+      
+          <div class="form-group kt-form__group row"> 
+              <div class="col-lg-2 kt-margin-bottom-20-mobile">
+                <input type="button" mat-raised-button color="primary" class=" mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
+                  <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
+              </div>
+          </div>
+
+    </div>
+  </div>
+
+
 
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
@@ -7,44 +71,7 @@
   </div>
   <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
     <form [formGroup]="cpForm" class="kt-form kt-form--group-seperator-dashed">
-      <div class="form-group kt-form__group row">
 
-        <!-- <kt-alert *ngIf="hasFormErrors" class="col-lg-12" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
-          Please enter valid Input
-        </kt-alert> -->
-      
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-  
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                  <mat-label class="customMatLabel">Zone<strong class="matMandatory">*</strong></mat-label>
-                  <input matInput formControlName="Zone"  maxlength="13" autocomplete="off" readonly="readonly"/>
-                </mat-form-field>
-          </div>
-  
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-              
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                  <mat-label class="customMatLabel">Branch<strong class="matMandatory">*</strong></mat-label>
-                  <input matInput formControlName="Branch"  maxlength="13" autocomplete="off" readonly="readonly"/>
-                </mat-form-field>
-          </div>
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-              <mat-label class="customMatLabel">CNIC#</mat-label>
-              <!-- <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" [readonly]="viewOnly"/> -->
-              <input appNumberOnly matInput placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" />
-            </mat-form-field>
-        </div>
-      </div>
-  
-
-  
-      <div class="form-group kt-form__group row"> 
-          <div class="col-lg-2 kt-margin-bottom-20-mobile">
-            <input type="button" mat-raised-button color="primary" class=" mat-raised-button mat-button-base mat-primary searchLCBtn"  value="Find" (click)="find()" />
-              <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
-          </div>
-      </div>
 
 
         <div *ngIf="phoneCellTab" class="form-group kt-form__group row justify-content-center">
