--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -1,8 +1,16 @@
 <div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
-  <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Pendings Customer</div>
+
+
+
+  <div class="row py-3">
+    <div class="col-lg-8 col-sm-12">
+        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Pendings Customer</div>
+    </div>
+  </div>
+
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4"
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between"
     style="flex-wrap: wrap">
 
   </div>
