--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -1,9 +1,15 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2 mt-4" style="background-color: #f6fcf8;">Add Update Bench Marking</div>
+    <div class="row py-3">
+      <div class="col-lg-8 col-sm-12">
+          <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Add Update Bench Marking</div>
+      </div>
+
+  </div>
+
     <div [formGroup]="addUpdateBenchMarkForm">
 
 
-      <div class="row mt-4 ">
+      <div class="row ">
         <div class="col-lg-3 col-sm-12">
         <div>
 
