--- a/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
@@ -1,15 +1,26 @@
 <div id="Kt-portlet-margin-top">
-    <div class="kt-portlet">
-        <!--[ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }"-->
+    <!-- <div class="kt-portlet">
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
             <div class="kt-portlet__head-label">
                 <h3 class="kt-portlet__head-title">GL/Schemes/Crop Configuration</h3>
             </div>
-            <!-- <span (click)="onCloseClick()"><mat-icon>close</mat-icon></span> -->
             <button mat-raised-button color="primary" class="btn center" style="width: 5px; height: 30px;"
                     (click)="onCloseClick()">
                 <mat-icon>close</mat-icon>
             </button>
+        </div>
+    </div> -->
+    <div class="row">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">GL/Schemes/Crop Configuration</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button mat-raised-button  class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"
+                (click)="onCloseClick()">
+            <mat-icon>close</mat-icon>
+        </button>
+              </p>
         </div>
     </div>
 
@@ -31,40 +42,41 @@
                         </kt-alert>
                     </div>
 
-                    <div class="form-group kt-form__group row">
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-12">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">GL <strong class="matMandatory">*</strong></mat-label>
+                                    <input matInput placeholder="Enter Gl" formControlName="GLCode" maxlength="13"
+                                           autocomplete="off"/>
+                                </mat-form-field>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                <mat-label class="customMatLabel">GL <strong class="matMandatory">*</strong></mat-label>
-                                <input matInput placeholder="Enter Gl" formControlName="GLCode" maxlength="13"
-                                       autocomplete="off"/>
-                            </mat-form-field>
                         </div>
-
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                <mat-label class="customMatLabel">Scheme Code</mat-label>
-                                <input matInput placeholder="Enter Scheme Code" formControlName="SchemeCode"
-                                       maxlength="13" autocomplete="off"/>
-                            </mat-form-field>
+                        <div class="col-lg-4 col-sm-12">
+                                <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">Scheme Code</mat-label>
+                                    <input matInput placeholder="Enter Scheme Code" formControlName="SchemeCode"
+                                           maxlength="13" autocomplete="off"/>
+                                </mat-form-field>
                         </div>
-
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                <mat-label class="customMatLabel">Crop Code</mat-label>
-                                <input matInput placeholder="Enter Crop Code" formControlName="CropCode" maxlength="13"
-                                       autocomplete="off"/>
-                            </mat-form-field>
-                        </div>
-
-                    </div>
-
-
-                    <div class="col-lg-12">
-                        <div class="form-group kt-form__group">
-                            <button mat-raised-button color="primary" (click)="find()">Find</button>
+                        <div class="col-lg-4 col-sm-12">
+                                <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">Crop Code</mat-label>
+                                    <input matInput placeholder="Enter Crop Code" formControlName="CropCode" maxlength="13"
+                                           autocomplete="off"/>
+                                </mat-form-field>
+    
                         </div>
                     </div>
+
+
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-12">
+                            <div class="form-group kt-form__group">
+                                <button mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
 
@@ -307,11 +319,11 @@
         <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
             <div class="kt-form__actions kt-form__actions--solid">
                 <div class="row text-center">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 text-right">
                         <!-- <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp; -->
-                        <button type="button" class="button-red" mat-raised-button cdkFocusInitial
+                        <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md  mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                 (click)="onCloseClick()">
-                            Close
+                                <mat-icon class="mr-2">cancel</mat-icon>Close
                         </button>
                     </div>
                 </div>
